fdo#82757 call convertStringToNumber and detectNumberFormat with same locale

So that they agree (among others) on date recognition patterns.

Change-Id: I964142702b5bb23bca2c62433e52f76dfa4bdacb